# cc_processor

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Writeup.docx  docker-compose.yml  errors.txt  foo.txt  manage.py  paper_notes.txt  pyproject.toml  questions.txt  static_mapping.py  study.txt  todo.txt  utilities_basic.py  utilities_basicReader.py
db_backups/: process_uniprotdata_2025_07_19.sql
db_data/: process_peptidestartposition_2025_07_19.sql  process_uniprotdata_2025_07_19.sql
process/: admin.py  constants.py  factories.py  models.py  views.py
process/migrations/: 0001_initial.py  0002_auto_20250531_1536.py  0002_auto_20250601_1241.py  0002_auto_20250615_1308.py  (+20 more)
processor/: asgi.py  settings.py  urls.py  wsgi.py
supplementary_data/: CCDs_phospho_protein.csv  CCDs_protein.csv  CORUM_CCD_complexes.csv  CORUM_mitotic_cell_cycle_complexes.csv  GO_enrichment_list_phospho_protein.csv  GO_enrichment_list_protein.csv  GO_locations_CCD.csv  GO_locations_mitotic_cell_cycle.csv  cell_cycle_relevant_CCDs_found.csv  cell_cycle_relevant_CCDs_not_found.csv  cell_cycle_relevant_CORUM_complexes.csv  cell_cycle_relevant_GO_cellular_locations.csv  mitotic_cell_cycle_phospho_proteins.csv  mitotic_cell_cycle_proteins.csv  phospho_protein_GO_enrichment_list.txt  phospho_proteins_matching_cell_cycle_GO_enrichment_term.txt  protein_GO_enrichment_list.txt  proteins_matching_cell_cycle_GO_enrichment_term.txt  relevant_phospho_proteins.txt  relevant_proteins.txt  well_known_cell_cycle_regulators.csv
tests/: conftest.py  test_process.py
(+34 files in other folders)
